[workspace]
resolver = "2"
members = [
    "packages/api_server",
    "packages/core",
    "packages/ibkr_client_portal",
]

[workspace.dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
axum-macros = "0.4.1"
dogstatsd = "0.11.1"
dotenv = "0.15.0"
futures-util = "0.3.30"
log = "0.4.20"
longbridge = "0.2.77"
reqwest = "0.11.24"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
serde = "1.0.196"
serde_json = "1.0.113"
serde_repr = "0.1.18"
serial_test = "3.0.0"
simple_logger = "4.3.3"
tempfile = "3.9.0"
time = "0.3.34"
tokio = "1.35.1"
tokio-tungstenite = "0.21.0"
tokio-test = "0.4.3"
yahoo_finance_api = "2.1.0"
