[workspace]
resolver = "2"
members = [
    "packages/api_server",
    "packages/core",
    "packages/ibkr_client_portal",
]

[workspace.dependencies]
anyhow = "1.0.83"
async_once = "0.2.6"
async-trait = "0.1.80"
axum = "0.7.5"
axum-macros = "0.4.1"
dogstatsd = "0.11.1"
dotenv = "0.15.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
longbridge = "0.2.77"
mixin = "0.2.0"
reqwest = "0.12.4"
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = "1.0.201"
serde_json = "1.0.117"
serde_repr = "0.1.19"
serde_yaml_ng = "0.9.36"
serial_test = "3.1.1"
simple_logger = "5.0.0"
tempfile = "3.10.1"
time = "0.3.36"
tokio = "1.37.0"
tokio-tungstenite = "0.21.0"
tokio-test = "0.4.4"
yahoo_finance_api = "2.1.0"
